# HTF_lecture

./: .gitignore  .travis.yml  Makefile  README.md  conf.py  copy_lecture.py  environment.yaml  genindex.html  index.html  index.rst  index.xml  objects.inv  push.sh  pyproject.toml  readme4instructors.md  refs.html  search.html  searchindex.js  sitemap.xml
Summer2022/: Makefile
Summer2024/: Makefile
_sources/: index.rst.txt
_static/: style.css
categories/: index.html  index.xml
contact/: index.html  index.xml
css/: style.min.css
data_charts/: Global_EarthByte_GPlates_PresentDay_ContinentalPolygons.geojson  Global_EarthByte_GPlates_PresentDay_StaticPlatePolygons.geojson  Muller_etal_2019_GeeK07_Ridges.geojson  changchun.json
faq/: index.html  index.xml
general-info/: course-details.html
home/: .gitignore  config.toml
imprint/: index.html  index.xml
js/: script.min.js
site/: .travis.yml  index.rst  push.sh
source/: bibtex.json  conf.py  include.rst_  index.rst  refs.bib
soure/: include.rst_
summer2021/: commit.ID  genindex.html  index.html  index.xml  objects.inv  refs.html  search.html  searchindex.js
summer2022/: commit.ID  genindex.html  index.html  index.xml  objects.inv  refs.html  search.html  searchindex.js
summer2024/: commit.ID  genindex.html  index.html  index.xml  objects.inv  refs.html  search.html  searchindex.js
summer2025/: commit.ID  genindex.html  index.html  index.xml  objects.inv  refs.html  search.html  searchindex.js
tags/: index.html  index.xml
winter2020/: commit.ID  genindex.html  index.html  index.xml  (+3 more)
(+897 files in other folders)
