[tool.poetry]
name = "htf-lecture"
version = "0.1.0"
description = ""
authors = ["Lars Ruepke <lruepke@geomar.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
nbconvert = "^7.16.3"
sphinx-inline-tabs = "^2023.4.21"
hugo = "^0.125.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
