[tool.poetry]
name = "htf-lecture"
version = "0.1.0"
description = ""
authors = ["Lars Ruepke <lruepke@geomar.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
nbconvert = "^7.16.3"
sphinx-inline-tabs = "^2023.4.21"
hugo = "^0.125.3"
sphinx-copybutton = "^0.5.2"
scipy = "^1.13.0"
tabulate = "^0.9.0"
cython = "^3.0.10"
setuptools = "^70.0.0"
meshio = "^5.3.5"
h5py = "^3.11.0"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
